# beam_handling

./: .gitignore  README.md
beam_handling_cpp/: CMakeLists.txt
beam_handling_cpp/src/: generate_kinematics_fcns.cpp
beam_handling_py/: data_analysis_ICRA.py  expr_data_analysis_ICRA.py  js_trajectory_planning.py  requirements.txt  setup.py
beam_handling_py/beam_handling_py/: data_processing.py  input_shaping.py  kinematics_utils.py  models.py  optimal_control.py  panda.py  plotting.py  poly_trajectory_planning.py  simulation.py  tasks.py  visualizer.py
beam_handling_py/casadi_fcns/: eval_Jpend.casadi  eval_Ree.casadi  eval_Rpend.casadi  eval_apend.casadi  eval_dJpend.casadi  eval_pee.casadi  eval_ppend.casadi  eval_vpend.casadi
beam_handling_py/param_estimation/: beam_params_analytical.py  beam_params_estimation.py
data/param_estimation_ICRA/: ocp_Xdown_15cm_0.35s_1.csv  ocp_Xdown_15cm_0.35s_4.csv  ocp_Xdown_15cm_0.35s_5.csv  ocp_Xdown_25cm_0.44s_4.csv  ocp_Xdown_25cm_0.44s_5.csv  ocp_Xdown_25cm_0.44s_6.csv  ocp_Xdown_35cm_0.57s_1.csv  ocp_Xdown_35cm_0.57s_2.csv  ocp_Xdown_35cm_0.57s_3.csv  ocp_Xdown_35cm_0.57s_4.csv  ocp_Xdown_35cm_0.57s_5.csv  ocp_Xdown_35cm_0.57s_6.csv  ocp_Xup_15cm_0.35s_2.csv  ocp_Xup_15cm_0.35s_4.csv  ocp_Xup_25cm_0.44s_3.csv  ocp_Xup_25cm_0.44s_6.csv  ocp_Xup_35cm_0.57s_1.csv  ocp_Xup_35cm_0.57s_2.csv  ocp_Xup_35cm_0.57s_5.csv  ocp_Z_15cm_0.42s_2.csv  ocp_Z_25cm_0.50s_1.csv  ocp_Z_25cm_0.50s_3.csv  ocp_Z_25cm_0.50s_4.csv  ocp_Z_25cm_0.50s_5.csv  ocp_Z_25cm_0.50s_6.csv  ocp_Z_35cm_0.61s_2.csv  ocp_Z_35cm_0.61s_5.csv
(+67 files in other folders)
